# qsharp-bridge

./: .gitignore  Cargo.toml  build-ios.sh  build.rs  uniffi.toml
csharp/sample-host/: Program.cs  sample-host.csproj  sample-host.sln
src/: lib.rs  qsharp-bridge.udl  qsharp-runner.udl  swift-qsharp.udl
