[package]
name = "swift-qsharp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
qsc = { path = "../qsharp/compiler/qsc" }
uniffi = { version = "0.23.0", features=["build"] }
thiserror = "1.0"

[build-dependencies]
uniffi_build = "0.23.0"
uniffi_bindgen = "0.23.0"